# mlops-gcp

./: .gitignore  README.md  env.common.sh
CloudBuild-CICD/cloudrun-app/: create-bigquery-table.sql
Section3-CloudBuild-CICD/cloudrun-app/: docker-cloudrun-commands.sh
Section3-CloudBuild-CICD/cloudrun-ml-models/: gcloud-permission-commands.sh
Section3-CloudBuild-CICD/cloudrun-ml-models/coupon-recommendations-v2/: .dockerignore  .gitignore  Dockerfile  README.md  cloudbuild.yaml  env.project.sh  pyproject.toml  requirements.txt
Section3-CloudBuild-CICD/cloudrun-ml-models/coupon-recommendations-v2/scripts/: deploy-curl-commands.sh  local_run.sh  smoke_test.sh  test-flask-output-local.sh
Section3-CloudBuild-CICD/cloudrun-ml-models/coupon-recommendations-v2/src/coupon_reco/: __init__.py  app.py  config.py  main.py
Section3-CloudBuild-CICD/cloudrun-ml-models/coupon-recommendations-v2/src/coupon_reco/api/: routes.py
Section3-CloudBuild-CICD/cloudrun-ml-models/coupon-recommendations-v2/src/coupon_reco/inference/: features.py  predictor.py
Section3-CloudBuild-CICD/cloudrun-ml-models/coupon-recommendations-v2/tests/: test_api.py
Section4-ContinuousTraining-Airflow-Composer/cicd-model-training/: cloudbuild.yaml  env.project.sh
Section8-GenAI/simple-flask-palm-api/: env.project.sh
docs/: LOCAL_MAC_M2.md  PROGRESSIVE_LABS.md  SETUP_GCP.md  TRIGGERS.md  TRIGGERS_DEV_MAIN.md  TRIGGERS_DEV_VS_MAIN.md
scripts/: bootstrap_iam.sh  create_trigger_cloudrun.sh  create_triggers.sh  deploy_lab.sh  local_conda_env.yml  local_env_mac_m2.sh
(+54 files in other folders)
